feat : add carousel and card elements

--- a/index.html
+++ b/index.html
@@ -55,18 +55,121 @@
           </li>
           <ul class="dropdown lang">
             <button class="drop-btn">
-              En<i class="material-symbols-outlined" id="faded"> expand_more </i>
+              En<i class="material-symbols-outlined" id="faded">
+                expand_more
+              </i>
             </button>
             <li class="dropdown-content">Hindi</li>
           </ul>
         </ul>
       </nav>
     </header>
-    <!-- <main>
-      <section>
-        <h1>Latest news</h1>
-      </section>
+    <main>
+      <aside>
+        <form action="search" class="search">
+          <input type="text" placeholder="Article name, tag, category..." />
+        </form>
+        <h2 class="recommended">Recommended</h2>
+        <p>View all <i class="material-symbols-outlined"> chevron_right </i></p>
+        <div class="carousel">
+          <div class="carousel_element">
+            <img src="/images/Trading.jpg" width="100%" />
+            <figcaption>
+              <dt>Blockchain News</dt>
+              <dd>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet
+                totam cum, omnis culpa tenetur sunt maxime ea praesentium magni
+                laborum, ipsa nihil? Culpa neque quae impedit, repellendus ex
+                consequatur ipsam?
+              </dd>
+            </figcaption>
+          </div>
+          <div class="carousel_element">
+            <img src="/images/Trading.jpg" width="100%" />
+            <figcaption>
+              <dt>Blockchain News</dt>
+              <dd>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet
+                totam cum, omnis culpa tenetur sunt maxime ea praesentium magni
+                laborum, ipsa nihil? Culpa neque quae impedit, repellendus ex
+                consequatur ipsam?
+              </dd>
+            </figcaption>
+          </div>
+        </div>
+        <div class="card">
+          <aside><img src="/images/Trading.jpg" width="100%" /></aside>
+          <dl>Blockchain News</dl>
+          <time>4 hours ago</time>
+          <dd>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita
+            nihil delectus eos sed, accusamus perferendis, a beatae, itaque esse
+            modi distinctio sunt maiores odio sint similique earum sit
+            recusandae illo?
+          </dd>
+        </div>
+        <hr />
+        <div class="card">
+          <aside><img src="/images/Trading.jpg" width="100%" /></aside>
+          <dl>Blockchain News</dl>
+          <time>4 hours ago</time>
+          <dd>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita
+            nihil delectus eos sed, accusamus perferendis, a beatae, itaque esse
+            modi distinctio sunt maiores odio sint similique earum sit
+            recusandae illo?
+          </dd>
+        </div>
+        <hr />
+        <div class="card">
+          <aside><img src="/images/Trading.jpg" width="100%" /></aside>
+          <dl>Blockchain News</dl>
+          <time>4 hours ago</time>
+          <dd>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita
+            nihil delectus eos sed, accusamus perferendis, a beatae, itaque esse
+            modi distinctio sunt maiores odio sint similique earum sit
+            recusandae illo?
+          </dd>
+        </div>
+        <hr />
+        <div class="card">
+          <aside><img src="/images/Trading.jpg" width="100%" /></aside>
+          <dl>Blockchain News</dl>
+          <time>4 hours ago</time>
+          <dd>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita
+            nihil delectus eos sed, accusamus perferendis, a beatae, itaque esse
+            modi distinctio sunt maiores odio sint similique earum sit
+            recusandae illo?
+          </dd>
+        </div>
+        <hr />
+        <div class="card">
+          <aside><img src="/images/Trading.jpg" width="100%" /></aside>
+          <dl>Blockchain News</dl>
+          <time>4 hours ago</time>
+          <dd>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita
+            nihil delectus eos sed, accusamus perferendis, a beatae, itaque esse
+            modi distinctio sunt maiores odio sint similique earum sit
+            recusandae illo?
+          </dd>
+        </div>
+        <hr />
+        <div class="card">
+          <aside><img src="/images/Trading.jpg" width="100%" /></aside>
+          <dl>Blockchain News</dl>
+          <time>4 hours ago</time>
+          <dd>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita
+            nihil delectus eos sed, accusamus perferendis, a beatae, itaque esse
+            modi distinctio sunt maiores odio sint similique earum sit
+            recusandae illo?
+          </dd>
+        </div>
+        <hr />
+      </aside>
     </main>
-    <footer></footer> -->
   </body>
 </html>
