--- a/index.html
+++ b/index.html
@@ -62,74 +62,78 @@
         </ul>
       </nav>
     </header>
-    <main>
-      <!-- side content , carousel and cards -->
-      <aside class="side_content">
-        <form action="search" class="search">
-          <input type="text" placeholder="Article name, tag, category..." />
-        </form>
-        <h2 class="recommended">Recommended</h2>
-        <span class="view">
-          View all
-          <i class="material-symbols-outlined">chevron_right</i>
-        </span>
-        <!-- carousel start -->
-        <!-- 1 element  -->
-        <div class="carousel_element">
-          <div class="elemnt">
-            <dl class="blockchain_news">Blockchain News</dl>
-            <i class="full_faded">&#x2022;</i>
-            <time class="time">4 hours ago</time>
-            <p>
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet
-              totam cum, omnis culpa tenetur
-            </p>
+    <!-- side content , carousel and cards -->
+    <aside class="side_content">
+      <form action="search" class="search">
+        <input type="text" placeholder="Article name, tag, category..." />
+      </form>
+      <h2 class="recommended">Recommended</h2>
+      <span class="view">
+        View all
+        <i class="material-symbols-outlined">chevron_right</i>
+      </span>
+      <!-- carousel start -->
+      <!-- 1 element  -->
+      <div class="carousel_element">
+        <div class="elemnt">
+          <div class="indicator">
+            <button class="active"></button>
+            <button></button>
           </div>
-        </div>
-        <!-- card start  -->
-        <!-- 1 card  -->
-        <div class="card">
-          <aside>
-            <img src="/images/crypto.jpeg" width="100%" class="card_image" />
-          </aside>
           <dl class="blockchain_news">Blockchain News</dl>
           <i class="full_faded">&#x2022;</i>
           <time class="time">4 hours ago</time>
-          <dd class="card_txt">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita
-            nihil delectus eos sed
-          </dd>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet totam
+            cum, omnis culpa tenetur
+          </p>
         </div>
-        <hr />
-        <!-- 2 card  -->
-        <div class="card">
-          <aside>
-            <img src="/images/crypto.jpeg" width="100%" class="card_image" />
-          </aside>
-          <dl class="blockchain_news">Blockchain News</dl>
-          <i class="full_faded">&#x2022;</i>
-          <time class="time">4 hours ago</time>
-          <dd class="card_txt">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita
-            nihil delectus eos sed
-          </dd>
-        </div>
-        <hr />
-        <!-- 3 card  -->
-        <div class="card">
-          <aside>
-            <img src="/images/crypto.jpeg" width="100%" class="card_image" />
-          </aside>
-          <dl class="blockchain_news">Blockchain News</dl>
-          <i class="full_faded">&#x2022;</i>
-          <time class="time">4 hours ago</time>
-          <dd class="card_txt">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita
-            nihil delectus eos sed
-          </dd>
-        </div>
-        <hr />
-      </aside>
+      </div>
+      <!-- card start  -->
+      <!-- 1 card  -->
+      <div class="card">
+        <aside>
+          <img src="/images/crypto.jpeg" width="100%" class="card_image" />
+        </aside>
+        <dl class="blockchain_news">Blockchain News</dl>
+        <i class="full_faded">&#x2022;</i>
+        <time class="time">4 hours ago</time>
+        <dd class="card_txt">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita
+          nihil delectus eos sed
+        </dd>
+      </div>
+      <hr />
+      <!-- 2 card  -->
+      <div class="card">
+        <aside>
+          <img src="/images/crypto.jpeg" width="100%" class="card_image" />
+        </aside>
+        <dl class="blockchain_news">Blockchain News</dl>
+        <i class="full_faded">&#x2022;</i>
+        <time class="time">4 hours ago</time>
+        <dd class="card_txt">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita
+          nihil delectus eos sed
+        </dd>
+      </div>
+      <hr />
+      <!-- 3 card  -->
+      <div class="card">
+        <aside>
+          <img src="/images/crypto.jpeg" width="100%" class="card_image" />
+        </aside>
+        <dl class="blockchain_news">Blockchain News</dl>
+        <i class="full_faded">&#x2022;</i>
+        <time class="time">4 hours ago</time>
+        <dd class="card_txt">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita
+          nihil delectus eos sed
+        </dd>
+      </div>
+      <hr />
+    </aside>
+    <main>
       <!-- main content  -->
       <div style="height: 60px; margin-top: 80px; display: inline-block">
         <article>Best of the work</article>
