--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
     <aside class="side_content">
       <form action="search" class="search">
         <input type="text" placeholder="Article name, tag, category..." />
+        <i class="material-symbols-outlined"> search </i>
       </form>
       <h2 class="recommended">Recommended</h2>
       <span class="view">
